Add e2e tests, fix esm problems

--- a/package.json
+++ b/package.json
@@ -4,24 +4,27 @@
   "description": "",
   "author": "",
   "private": true,
+  "type": "commonjs",
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start --watch",
+    "prestart:dev": "docker compose --env-file .env.development up plan-my-trip-dev-db -d",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "prisma:test:migrate": "dotenv -e .env.test prisma migrate deploy",
-    "test:db:up": "docker compose up plan-my-trip-test-db -d",
+    "test:db:up": "docker compose --env-file .env.test up plan-my-trip-test-db -d",
     "test:db:setup": "npm run test:db:up && sleep 1 && npm run prisma:test:migrate",
     "pretest:watch": "npm run test:db:setup",
     "test:watch": "dotenv -e .env.test -- jest --watch --config jest.config.ts",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e env.test jest --config ./test/jest-e2e.json"
+    "pretest:e2e": "npm run test:db:setup",
+    "test:e2e": "dotenv -e env.test -- jest --watch --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -64,6 +67,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^30.0.0",
+    "pactum": "^3.9.0",
     "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prisma": "^7.3.0",
