--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "moduleResolution": "nodenext",
+    "moduleResolution": "Node",
     "allowJs": true,
     //    "resolvePackageJsonExports": true,
     "esModuleInterop": true,
